Bug 41833 - Comments in Writer: UI: Cursor does not move to new line
Summary: Comments in Writer: UI: Cursor does not move to new line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:4.2.0 target:4.1.3 target:4.0.6
Keywords:
: 68673 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-16 04:32 UTC by Johnny_M
Modified: 2013-09-19 12:10 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johnny_M 2011-10-16 04:32:10 UTC
When a new line is added (i.e. the return key pressed) in a comment in writer, the new line gets created, but the cursor changes to the beginning of the previous line, instead of that new one. In other words, a “carriage return” is done on the same line, without a “line feed”.

Test procedure:
1. Open a new LibreOffice Write document
2. Insert a comment
3. In the comment field, do following three times: type a line and hit return at its end

Expected results:
3. New line with cursor jumping to its beginning at each return key

Observed results:
3. First two lines: OK. Third and subsequent lines: a new empty line gets created, but the cursor jumps to beginning of current line, instead of the new one.
Comment 1 Björn Michaelsen 2011-12-23 12:31:51 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 2 sasha.libreoffice 2012-01-09 00:16:23 UTC
reproduced in LibO 3.5.0 beta 1 on Fedora 64 bit
Comment 3 Johnny_M 2012-03-27 01:51:14 UTC
Reproduced on LibO 3.5.1 release, WinXP SP3 32 bit.
Comment 4 Johnny_M 2012-12-30 04:54:04 UTC
I think my setting of the "Importance" fields to "low medium" on bug creation was a mistake, as it seems that the first of those fields means "Priority" and therefore for TDF engeneers to set (according to bug fields description) and the second field means "Severity" (as it also contains the "enhancement" value). It's a bit confusing in fact and easy to overlook what the two "Importance" fields stand for.

I'm therefore correcting the "Importance" to "medium minor".
Comment 5 Johnny_M 2013-07-20 05:22:52 UTC
Confirmed in LibO 4.0.4 release, WinXP SP3 32 bit.
Comment 6 tommy27 2013-09-12 23:57:43 UTC
*** Bug 68673 has been marked as a duplicate of this bug. ***
Comment 7 tommy27 2013-09-12 23:59:58 UTC
reproducible under Win7 64bit on multiple releases up to old 3.3.3.
bug is present in AOO 4.0.0 as well, so I suspect it's inherited from LibO.

it affects just Writer comments. Calc comments are unaffected.
as said by reporter bug is evident only after hitting "enter" more than 3 times.
Comment 8 Commit Notification 2013-09-17 14:56:51 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ddbcb6687722314b37cfda3170596ac7a4f69602

fdo#41833: fix visual cursor position after resizing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-09-19 11:45:41 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=195ac805ee3350adb5971c90edee3ee8481f41a9&h=libreoffice-4-1

fdo#41833: fix visual cursor position after resizing


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-09-19 11:57:08 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2da3517dd289e00b98f7f8616a4faa9b00fb8403&h=libreoffice-4-0

fdo#41833: fix visual cursor position after resizing


It will be available in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.