fdo#41833: fix visual cursor position after resizing

SetOutputArea updates a cursor position, SetVisArea doesn't => call SetOutputArea
after SetVisArea.

Change-Id: Ie8f079cb3d567f759c84587a8072b98fab43588b